Actualizacion 2.5